fix: add indentation according to rule 3.5 in style.css

--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body {
 }
 
 @media (max-width:768px) {
-  .aaa { text-align: center;
+  .aaa { 
+    text-align: center;
   }
 }
 
@@ -50,7 +51,7 @@ li, h3 {
   list-style: none;
 }
 
-input,button{
+input,button {
   outline: none;
 }
 
@@ -116,7 +117,6 @@ li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -137,7 +137,7 @@ li > label {
   width: 226px;
 }
 
-li >    input[type="text"] {
+li > input[type="text"] {
   width: 226px;
 }
 
